Did some minor changes and corrected grammar

--- a/Stylesheets/basic layout.css
+++ b/Stylesheets/basic layout.css
@@ -73,8 +73,10 @@ header {
  }
             nav a:hover {
                 text-decoration: underline;
+ }
+            .actual {
+                text-decoration: underline;
 }
-
 
 
 /* HLAVNÁ ČASŤ STRÁNKY */
