--- a/Stylesheets/basic layout.css
+++ b/Stylesheets/basic layout.css
@@ -3,19 +3,27 @@ html, body {
     margin: 0;
     height: 100%;
     min-height: 100%;
+    background-color: whitesmoke;
 }
 h1,h2,h3,h4,h5,h6 {
     margin: 0;
     padding: 0;
 }
+h1 {
+    text-align: center;
+    font-weight: bold;
+    border-bottom: black 0.1em solid;
+    padding-bottom: 0.1em;
+    margin: 0 1em 0.5em 1em;
+}
 p, address{
+    text-align: justify;
     font-size: 1.2em;
     line-height: 1.2em;
     margin-bottom: 1.5em;
 }
 
 .obsah {
-    background-color: rgb(231, 231, 231);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -34,6 +42,8 @@ header {
 
 /* LOGO */
     #logo {
+        margin: 0 auto;
+        width: 12em;
         text-align: center;
     }
 
@@ -41,12 +51,14 @@ header {
             padding-top: 0.5em;
             font-size: 1.5em;
             font-weight: bold;
+            margin: 0.5em 0 0 0;
  }
 
         #logo h2 {
             padding: 0.3em 0;
             font-size: 1em;
             font-weight: bold;
+            margin: 0 0 1em 0;
  }
 
 
@@ -54,7 +66,7 @@ header {
 /* NAVIGÁCIA */
     nav ul {
         text-align: center;
-        border-top: black 0.05em solid;
+        border-top: black 2px solid;
         border-bottom: black 2px solid;
  }
         nav li {
@@ -90,24 +102,14 @@ main {
     border-right: black 2px solid;
     border-left: black 2px solid;
  }
-    main h1 {
-        text-align: center;
-        font-weight: bold;
-        border-bottom: black 0.1em solid;
-        padding-bottom: 0.1em;
-        margin: 0 1em 0.5em 1em;
- }
-    main p {
-        font-size: 1.2em;
-        line-height: 1.2em;
-        margin-bottom: 1.5em;
+    section {
+        margin-bottom: 2em;
 }
-
 
 /* FOOTER */
 footer {
     flex: none;
-    background-color: whitesmoke;
+    background: radial-gradient(circle, white, rgb(230, 230, 230) 85%);
     width: 100%;
     padding: 1em;
     border-top: black solid 2px;
