--- a/Stylesheets/prezentacia.css
+++ b/Stylesheets/prezentacia.css
@@ -12,24 +12,34 @@
 .animated {
     border: black 0.1em solid;
 }
-.left-button, .right-button {
+#left-button, #right-button, #fullscreen-button {
     border: black 2px solid;
     border-bottom: none;
 }
-.left-button {
+#left-button {
     background-color: rgb(215, 195, 165);
-    width: 49%;
+    width: 40%;
+    height: 2em;
+    border-left: none;
+    float: left;
+}
+#right-button {
+    background-color: rgb(215, 195, 165);
+    width: 40%;
     height: 2em;
     border-left: none;
 }
-.right-button {
-    background-color: rgb(215, 195, 165);
-    width: 49%;
+#fullscreen-button {background-color: rgb(215, 195, 165);
+    width: 15%;
     height: 2em;
-    float: right;
     border-right: none;
+    float: right;
 }
-
-.left-button:hover, .right-button:hover {
+#fullscreen-button img {
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+}
+#left-button:hover, #right-button:hover, #fullscreen-button:hover{
     background: rgb(185, 185, 185);
 }
