bug fix attempt

--- a/Stylesheets/prezentacia.css
+++ b/Stylesheets/prezentacia.css
@@ -2,13 +2,13 @@
     border: black 0.1em solid;
     background:blanchedalmond;
 }
-@media only screen and (min-width: 1100px){
+/*@media only screen and (min-width: 1100px){
     .presentation {
         max-width: 80%;
         max-height: 590px;
         margin: auto;
     }
-}
+}*/
 .animated {
     border: black 0.1em solid;
 }
@@ -41,5 +41,5 @@
     vertical-align: middle;
 }
 #left-button:hover, #right-button:hover, #fullscreen-button:hover{
-    background: rgb(185, 185, 185);
+    background: rgb(185, 155, 125);
 }
