--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,17 @@ main {
 .choice1 a {
     color: blanchedalmond;
 }
+
+.choice2 {
+    background-color: #4D4D4D;
+    background-image: url(../images/unity-background.png);
+    background-size: 250px;
+    background-repeat: no-repeat;
+    background-position: 40%;
+}
+.choice2 a {
+    color: #999999;
+}
 @media only screen and (max-width: 715px){
     h1{font-size: 2em;}
     h2{font-size: 1.5em;}
