--- a/styles/style.css
+++ b/styles/style.css
@@ -64,8 +64,8 @@ main {
     cursor: pointer;
 }
 .choice1 {
-    background-image: url(../images/Dark-wood-background.jpg);
-    background-size: cover;
+    background-image: url(../images/Dark-wood-background-480x360p.jpg);
+    background-size: 100% 100%;
 }
 .choice1 a {
     color: blanchedalmond;
