--- a/zvoncek/Stylesheets/main.css
+++ b/zvoncek/Stylesheets/main.css
@@ -77,6 +77,7 @@ main section:first-child {
 }
 main section:first-child img.mainlogo {
     max-width: 400px;
+    padding-top: 20px;
 }
 main section:first-child h2 {
     font-family: "LucidaHandwriting";
@@ -128,6 +129,9 @@ main section:first-child p {
 
 
 /* #### Druhá "strana" #### */
+#ponuka h2 {
+    line-height: 1.2em;
+}
 /* Navigácia Ponuky */
 .ponukaheader {
     text-align: center;
@@ -144,6 +148,8 @@ main section:first-child p {
     width: 24%;
     border: #5d66aa double 5px;
     border-radius: 25%;
+    min-width: fit-content;
+    margin-bottom: 10px;
 }
 .ponukaheader button:hover {
     background-color: #5d66aa;
@@ -239,6 +245,7 @@ footer h2 {
 }
 footer h3 {
     padding-top: 10px;
+    font-size: 20px;
 }
 .celkovehodiny {
     width: 80%;
@@ -250,6 +257,7 @@ footer h3 {
     display: inline-block;
     width: 45%;
     margin-left: 4.7%;
+    margin-top: 20px;
 }
 .kontakt {
     text-align: center;
@@ -257,6 +265,17 @@ footer h3 {
 }
 .kontakt h2 {
     padding-bottom: 20px;
+}
+
+
+
+
+@media screen and (max-width: 905px) {
+    .hodiny, .objednavky {
+        float: none;
+        display: block;
+        margin:  20px auto 0 auto;
+    }    
 }
 @media screen and (max-width: 800px) {
   .topnav a:not(:first-child) {
@@ -297,10 +316,6 @@ footer h3 {
   }
 }
 
-#pizza, #pochutinys, #jedlo, #prilohy {
-    display: none;
-}
-
 @media screen and (max-width: 800px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
@@ -322,6 +337,12 @@ footer h3 {
   }
 }
 
+@media screen and (max-width: 500px) {
+    .mainlogo {
+        width: 280px;
+    }
+
+}
 
 @font-face {
     font-family: "LucidaHandwriting";
